// Copyright 2024 Google LLC. All Rights Reserved.
// 
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//     http://www.apache.org/licenses/LICENSE-2.0
// 
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";
// All generated protos should be opaque, with "xxx_hidden_" prepended to their field names.


package dcl;

import "proto/connector/sdk.proto";
import "proto/empty.proto";


message FirebaseAlphaWebApp {
  string name = 1;
  string app_id = 2;
  string display_name = 3;
  string project_id = 4;
  repeated string app_urls = 5;
  string web_id = 6;
  string api_key_id = 7;
  string project = 8;
}

message ApplyFirebaseAlphaWebAppRequest {
  FirebaseAlphaWebApp resource = 1;
  repeated LifecycleDirective lifecycle_directives = 2;
  string service_account_file = 3;
}

message DeleteFirebaseAlphaWebAppRequest {
  string service_account_file = 1;
  FirebaseAlphaWebApp resource = 2;
}

message ListFirebaseAlphaWebAppRequest {
  string service_account_file = 1;
  string Project = 2;
}

message ListFirebaseAlphaWebAppResponse {
  repeated FirebaseAlphaWebApp items = 1;
}

service FirebaseAlphaWebAppService {
  rpc ApplyFirebaseAlphaWebApp(ApplyFirebaseAlphaWebAppRequest) returns (FirebaseAlphaWebApp);
  rpc DeleteFirebaseAlphaWebApp(DeleteFirebaseAlphaWebAppRequest) returns (google.protobuf.Empty);
  rpc ListFirebaseAlphaWebApp(ListFirebaseAlphaWebAppRequest) returns (ListFirebaseAlphaWebAppResponse);
}
